k8s/apps/dev/s9n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s9n
  namespace: s9n
spec:
  parentRefs:
    - { name: external, namespace: gateway }
    - { name: internal, namespace: gateway }
  hostnames: [ "s9n.no" ]
  rules:
    - backendRefs: [ { name: s9n, port: 80 } ]
      matches:
        - path: { type: PathPrefix, value: / }
